Fix footer's text transparancy for tablets - Done with z-index.

--- a/src/components/layout/Footer/Footer.css
+++ b/src/components/layout/Footer/Footer.css
@@ -9,6 +9,7 @@
     font-size: 1em;
     transition: all 0.7s ease-in-out;
     opacity: 1;
+    z-index: 10;
 }
 
 
